[tool.poetry]
name = "locust_jtl_reporter"
version = "0.1.0"
description = ""
authors = ["Willian Lopes <williangldzn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
locust = "^2.4.0"
Faker = "^9.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
